handling "required: false" in models

--- a/projects/crud-table-lib/src/lib/dynamic-form/dynamic-form-input.component.html
+++ b/projects/crud-table-lib/src/lib/dynamic-form/dynamic-form-input.component.html
@@ -34,5 +34,5 @@
         </div>
     </div>
 
-    <small class="text-danger" *ngIf="!isValid">{{input.header}} is required</small>
+    <small class="text-danger" *ngIf="!input.required? false : !isValid">{{input.header}} is required</small>
 </div>
