--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -18,14 +18,14 @@
             <input ngbButton type="radio" value="product">Product
           </label>
           <label *ngIf="canReadEntity(userEntity)" ngbButtonLabel class="btn-outline-primary btn-sm">
-            <input ngbButton type="radio" value="user">User
+            <input ngbButton type="radio" value="user">User Admin
           </label>
-          <label *ngIf="canReadEntity(taskEntity)" ngbButtonLabel class="btn-outline-primary btn-sm">
+          <!--label *ngIf="canReadEntity(taskEntity)" ngbButtonLabel class="btn-outline-primary btn-sm">
             <input ngbButton type="radio" value="task">Task
           </label>
           <label *ngIf="canReadEntity(taskItemEntity)" ngbButtonLabel class="btn-outline-primary btn-sm">
             <input ngbButton type="radio" value="taskitem">Task item
-          </label>
+          </label-->
           <label ngbButtonLabel class="btn-outline-primary btn-sm">
             <input ngbButton type="radio" value="modelSetup">Model Setup
           </label>
