--- a/src/app/scheduler/schedule-selector/schedule-selector.component.html
+++ b/src/app/scheduler/schedule-selector/schedule-selector.component.html
@@ -1,8 +1,8 @@
-<lib-crud-table-lib 
+<lib-crud-table 
   [entity]="entity" [entityName]="'schedules'" [filter]="''" 
   [permissions]="permissions" [itemsPerPage]="5" 
   (rowSelect)="rowSelect($event)">
-</lib-crud-table-lib>
+</lib-crud-table>
   
 <div class="d-flex justify-content-center">
   <button type="button" class="btn btn-sm btn-outline-success m-2" (click)="goPlanner()">Show Planner</button>
