--- a/src/app/scheduler/model-setup/model-setup.component.html
+++ b/src/app/scheduler/model-setup/model-setup.component.html
@@ -5,11 +5,9 @@
       <div class="p-2">Name</div>
       <input type="text" class="p-2" [(ngModel)]="shiftName">
       <div class="p-2">Start Time</div>
-      <p-calendar class="p-2" [(ngModel)]="shiftStartTime" [timeOnly]="true" [showIcon]="true" [readonlyInput]="true"
-        [utc]="false"></p-calendar>
+      <p-calendar class="p-2" [(ngModel)]="shiftStartTime" [timeOnly]="true" [showIcon]="true" [readonlyInput]="true"></p-calendar>
       <div class="p-2">End Time</div>
-      <p-calendar class="p-2" [(ngModel)]="shiftEndTime" [timeOnly]="true" [showIcon]="true" [readonlyInput]="true"
-        [utc]="false"></p-calendar>
+      <p-calendar class="p-2" [(ngModel)]="shiftEndTime" [timeOnly]="true" [showIcon]="true" [readonlyInput]="true"></p-calendar>
       <button type="button" class="btn btn-outline-primary btn-sm p-2" (click)="addNewTimeShift()">Save</button>
     </div>
     <lib-crud-table class="crud-table" [entityName]="'timeshifts'" [permissions]="actualPermissions" [entity]="timeShiftEntity"
