--- a/src/app/scheduler/job-editor/job-editor.component.html
+++ b/src/app/scheduler/job-editor/job-editor.component.html
@@ -29,7 +29,7 @@
   <div class="card-body p-0">
     <p-table id="jobEditorTable" #dt [columns]="jobCols" [value]="jobs" dataKey="name" 
              selectionMode="single" [(selection)]="selectedJob" [paginator]="true" [rows]="5"
-             styleClass="p-datatable-sm p-datatable-striped">
+             styleClass="p-datatable-sm p-datatable-striped small">
       
       <ng-template pTemplate="header" let-columns>
         <tr>
@@ -56,7 +56,13 @@
             </button>
           </td>
           <td *ngFor="let col of columns">
-            <span [ngClass]="{'badge badge-info': col.field === 'name', 'text-muted': col.field !== 'name'}">
+            <span [ngClass]="{'text-muted': col.field !== 'name'}" 
+                  [style.background-color]="col.field === 'name' ? getJobColor(rowData[col.field]) : ''"
+                  [style.color]="col.field === 'name' ? 'white' : ''"
+                  [style.padding]="col.field === 'name' ? '3px 6px' : ''"
+                  [style.border-radius]="col.field === 'name' ? '3px' : ''"
+                  [style.display]="col.field === 'name' ? 'inline-block' : ''"
+                  class="d-inline-block">
               {{ col.minPipe ? col.minPipe.transform(rowData[col.field] * 1000 * 60 + baseStartTime, col.arg) : 
                  col.datePipe ? col.datePipe.transform(rowData[col.field], col.arg) : rowData[col.field] }}
             </span>
